Try wrap: false

--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 kramdown:
   syntax_highlighter: rouge
   syntax_highlighter_opts:
-    formatter: HTML
+    wrap: false
 theme: jekyll-theme-minimal
